--- a/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
+++ b/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
@@ -123,7 +123,9 @@
     "8. Categories of paid apps based on the rating\n",
     "9. How can people's categories (Everyone/Teen/Adults) affect rating and #installs?\n",
     "10. Paid Apps based on max rating and Installs\n",
-    "11. Free Apps based on max rating and Installs"
+    "11. Free Apps based on max rating and Installs\n",
+    "12. Avg Installations/ Free-Paid Apps (incomplete)\n",
+    "13. Average app size for each category (incomplete)"
    ]
   },
   {
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,85 +368,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Adventure', (10000000.0, 1)),\n",
-       " ('Tools', (2900000.0, 1)),\n",
-       " ('Productivity', (3700000.0, 1)),\n",
-       " ('Communication', (1800000.0, 1)),\n",
-       " ('Tools', (6200000.0, 1)),\n",
-       " ('Social', (46000000.0, 1)),\n",
-       " ('Libraries & Demo', (2500000.0, 1)),\n",
-       " ('Lifestyle', (16000000.0, 1)),\n",
-       " ('Communication', (1300000.0, 1)),\n",
-       " ('Personalization', (3500000.0, 1)),\n",
-       " ('Racing', (51000000.0, 1)),\n",
-       " ('Maps & Navigation', (2700000.0, 1)),\n",
-       " ('Travel & Local', (7600000.0, 1)),\n",
-       " ('Maps & Navigation', (15000000.0, 1)),\n",
-       " ('Travel & Local', (29000000.0, 1)),\n",
-       " ('Food & Drink', (12000000.0, 1)),\n",
-       " ('Travel & Local', (2900000.0, 1)),\n",
-       " ('Tools', (2000000.0, 1)),\n",
-       " ('Lifestyle', (70000000.0, 1)),\n",
-       " ('Books & Reference', (11000000.0, 1)),\n",
-       " ('Social', (24000000.0, 1)),\n",
-       " ('Medical', (1400000.0, 1)),\n",
-       " ('Puzzle', (16000000.0, 1)),\n",
-       " ('Entertainment', (20000000.0, 1)),\n",
-       " ('Tools', (2400000.0, 1)),\n",
-       " ('Arcade', (25000000.0, 1)),\n",
-       " ('Arcade', (16000000.0, 1)),\n",
-       " ('Entertainment', (21000000.0, 1)),\n",
-       " ('Maps & Navigation', (11000000.0, 1)),\n",
-       " ('Auto & Vehicles', (6200000.0, 1)),\n",
-       " ('Lifestyle', (36000000.0, 1)),\n",
-       " ('Travel & Local', (7600000.0, 1)),\n",
-       " ('Photography', (6200000.0, 1)),\n",
-       " ('Entertainment', (6100000.0, 1)),\n",
-       " ('Maps & Navigation', (2600000.0, 1)),\n",
-       " ('Travel & Local', (11000000.0, 1)),\n",
-       " ('Health & Fitness', (3700000.0, 1)),\n",
-       " ('Education', (15000000.0, 1)),\n",
-       " ('Health & Fitness', (10000000.0, 1)),\n",
-       " ('Personalization', (8900000.0, 1)),\n",
-       " ('Shopping', (3900000.0, 1)),\n",
-       " ('Travel & Local', (30000000.0, 1)),\n",
-       " ('Personalization', (21000000.0, 1)),\n",
-       " ('Arcade', (26000000.0, 1)),\n",
-       " ('Tools', (4900000.0, 1)),\n",
-       " ('Tools', (4300000.0, 1)),\n",
-       " ('Board', (4800000.0, 1)),\n",
-       " ('Music & Audio', (4600000.0, 1)),\n",
-       " ('Books & Reference', (2800000.0, 1)),\n",
-       " ('Sports', (38000000.0, 1))]"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# size= 11, category= 2\n",
-    "def convert_to_bytes(x):\n",
-    "    suffixes = {'G': 1000000000, 'M': 1000000, 'k': 1000}\n",
-    "    for suffix, multiplier in suffixes.items():\n",
-    "        if suffix in x:\n",
-    "            return float(x[:-1]) * multiplier\n",
-    "    return float(x)\n",
+    "# # size= 11, category= 2\n",
+    "# def convert_to_bytes(size_str):\n",
+    "#     suffixes = {'G': 1000000000, 'M': 1000000, 'k': 1000}\n",
+    "#     for suffix, multiplier in suffixes.items():\n",
+    "#         if suffix in size_str:\n",
+    "#             return float(size_str[:-1]) * multiplier\n",
+    "#     return float(size_str)\n",
     "\n",
-    "size_rdd= rdd.filter(lambda x: x.split(',')[11]!='Varies with device' and x.split(',')[11]!='')\\\n",
-    "            .map(lambda x: (x.split(',')[2], (convert_to_bytes(x.split(',')[11]),1 )))\\\n",
-    "            # .reduceByKey(lambda x,y: (x[0], x[1]+y[1]))\\\n",
-    "            # .mapValues(lambda x: x[0]/x[1])\\\n",
-    "            # .sortBy(lambda x: x[1], ascending=False)\n",
+    "# size_rdd = rdd.filter(lambda x: x.split(',')[11]!='Varies with device' and x.split(',')[11]!='') \\\n",
+    "#             .map(lambda x: (x.split(',')[2], convert_to_bytes(x.split(',')[11]))) \\\n",
+    "#             .mapValues(lambda x: (x,1)) \\\n",
+    "#             # .reduceByKey(lambda x,y: (x[0]+y[0], x[1]+y[1])) \\\n",
+    "#             # .mapValues(lambda x: x[0]/x[1])\n",
     "\n",
-    "size_rdd.take(50)"
+    "# size_rdd.take(50)"
    ]
   },
   {
