--- a/DataAnalysis/DiagnosticAnalysis/DiagnosticAnalysis.ipynb
+++ b/DataAnalysis/DiagnosticAnalysis/DiagnosticAnalysis.ipynb
@@ -29,7 +29,7 @@
         "import seaborn as sns\n",
         "\n",
         "import sys; sys.path.append(\"../../\")\n",
-        "from DataExploration.DataExploration import read_data \n",
+        "from DataPreprocessing.DataPreprocessing import read_data \n",
         "import CorrelationAnalysis"
       ]
     },
