--- a/DataPreprocessing/DataPreprocessing.ipynb
+++ b/DataPreprocessing/DataPreprocessing.ipynb
@@ -9,7 +9,7 @@
         "import pyspark\n",
         "from pyspark.sql import SparkSession\n",
         "from pyspark import SparkContext\n",
-        "import DataExploration"
+        "import DataPreprocessing"
       ]
     },
     {
@@ -26,10 +26,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "DataExploration.delimiter_to_comma()\n",
-        "# DataExploration.delimiter_to_comma(file_name='train')\n",
-        "# DataExploration.delimiter_to_comma(file_name='val')\n",
-        "# DataExploration.delimiter_to_comma(file_name='test')"
+        "DataPreprocessing.delimiter_to_comma()\n",
+        "# DataPreprocessing.delimiter_to_comma(file_name='train')\n",
+        "# DataPreprocessing.delimiter_to_comma(file_name='val')\n",
+        "# DataPreprocessing.delimiter_to_comma(file_name='test')"
       ]
     },
     {
@@ -47,7 +47,7 @@
       "outputs": [],
       "source": [
         "sc = SparkContext(master='local')\n",
-        "spark=SparkSession.builder.appName('DataExploration').getOrCreate()"
+        "spark=SparkSession.builder.appName('DataPreprocessing').getOrCreate()"
       ]
     },
     {
@@ -92,7 +92,7 @@
       ],
       "source": [
         "# useless_cols = ['Scraped Time', 'Privacy Policy', 'Currency', 'Editors Choice']\n",
-        "df = DataExploration.read_data(spark)\n",
+        "df = DataPreprocessing.read_data(spark)\n",
         "df.show(5)"
       ]
     },
@@ -129,7 +129,7 @@
         }
       ],
       "source": [
-        "DataExploration.get_info(df)"
+        "DataPreprocessing.get_info(df)"
       ]
     },
     {
@@ -155,7 +155,7 @@
         }
       ],
       "source": [
-        "DataExploration.handle_size_col(df)"
+        "DataPreprocessing.handle_size_col(df)"
       ]
     },
     {
@@ -190,7 +190,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# df_copy= DataExploration.missing_values(df)"
+        "# df_copy= DataPreprocessing.missing_values(df)"
       ]
     },
     {
@@ -207,7 +207,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# DataExploration.detect_outliers(df, 'Rating')"
+        "# DataPreprocessing.detect_outliers(df, 'Rating')"
       ]
     },
     {
@@ -254,7 +254,7 @@
         }
       ],
       "source": [
-        "DataExploration.currency_col(df)"
+        "DataPreprocessing.currency_col(df)"
       ]
     },
     {
@@ -272,7 +272,7 @@
       ],
       "source": [
         "print(\"Since most of the values are USD, then we can remove this column\")\n",
-        "df = DataExploration.remove_useless_col(df, ['Currency'])"
+        "df = DataPreprocessing.remove_useless_col(df, ['Currency'])"
       ]
     },
     {
@@ -307,7 +307,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# DataExploration.split_data()"
+        "# DataPreprocessing.split_data()"
       ]
     }
   ],
