Remove redundant definitions

--- a/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
+++ b/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        " 'GROW.me,com.horodyski.grower,Tools,0.0,0.0,100+,100,478,True,0.0,USD,6.2M,4.1 and up,Rafal Milek-Horodyski,http://www.horodyski.com.pl,rmilekhorodyski@gmail.com,Feb 21  2020,Nov 12  2018,Everyone,http://www.horodyski.com.pl,False,False,False,2021-06-15 20:19:35']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#App Name=0\n",
+    "#App Name=0 \n",
     "#App Id=1\n",
     "#Category=2\n",
     "#Rating=3\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
     "#4. we map each value to a tuple of (avg price, count of each category, max price)\n",
     "#5. we map each row to a tuple of (category, (count of each category, avg price, max price))\n",
     "\n",
-    "price = rdd.filter(lambda x: x.split(',')[2] != '' and x.split(',')[9]!='') \\\n",
+    "price_categ = rdd.filter(lambda x: x.split(',')[2] != '' and x.split(',')[9]!='') \\\n",
     "        .map(lambda x: (x.split(',')[2], x.split(',')[9])) \\\n",
     "        .mapValues(lambda x: (float(x), 0, float(x))) \\\n",
     "        .aggregateByKey((0.0, 0, 0), \n",
@@ -204,8 +204,7 @@
     "                         lambda acc1, acc2: (acc1[0] + acc2[0], acc1[1] + acc2[1], max(acc1[2], acc2[2]))) \\\n",
     "        .mapValues(lambda x: (x[0] / x[1], x[1], x[2])) \\\n",
     "        .map(lambda x: (x[0], ( x[1][1], x[1][0], x[1][2])))\n",
-    "        \n",
-    "        \n"
+    "        "
    ]
   },
   {
@@ -227,13 +226,13 @@
     }
    ],
    "source": [
-    "sorted_by_avg= price.sortBy(lambda x: x[1][1], ascending=True)\n",
+    "sorted_by_avg= price_categ.sortBy(lambda x: x[1][1], ascending=True)\n",
     "\n",
     "price_list = sorted_by_avg.map(lambda x: x[1][1]).collect()\n",
     "category_list = sorted_by_avg.map(lambda x: x[0]).collect()\n",
     "\n",
     "utils.plots(category_list, price_list, \"Category\", \"Average Price\",\\\n",
-    "             \"Category vs Average Price\", \"dark_background\")\n"
+    "             \"Category vs Average Price\",  )\n"
    ]
   },
   {
@@ -253,12 +252,12 @@
     }
    ],
    "source": [
-    "sorted_by_max= price.sortBy(lambda x: x[1][2], ascending=True) \n",
+    "sorted_by_max= price_categ.sortBy(lambda x: x[1][2], ascending=True) \n",
     "\n",
     "price_list = sorted_by_max.map(lambda x: x[1][2]).collect()\n",
     "category_list = sorted_by_max.map(lambda x: x[0]).collect()\n",
     "\n",
-    "utils.plots(category_list, price_list, \"Category\", \"Maximum Price\", \"Category vs Maximum Price\", \"dark_background\")"
+    "utils.plots(category_list, price_list, \"Category\", \"Maximum Price\", \"Category vs Maximum Price\",  )"
    ]
   },
   {
@@ -278,12 +277,12 @@
     }
    ],
    "source": [
-    "sorted_by_count= price.sortBy(lambda x: x[1][0], ascending=True) \n",
+    "sorted_by_count= price_categ.sortBy(lambda x: x[1][0], ascending=True) \n",
     "\n",
     "count_list = sorted_by_count.map(lambda x: x[1][0]).collect()\n",
     "category_list = sorted_by_count.map(lambda x: x[0]).collect()\n",
     "\n",
-    "utils.plots(category_list, count_list, \"Category\", \"Count\", \"Category vs Count\", \"dark_background\")"
+    "utils.plots(category_list, count_list, \"Category\", \"Count\", \"Category vs Count\",  )"
    ]
   },
   {
@@ -332,7 +331,7 @@
     "top_10_categ= np.flip(top_10_categ, axis=0)\n",
     "\n",
     "utils.plots(top_10_categ[:,0], top_10_categ[:,1], \"Category\", \"Max Number of installs\",\\\n",
-    "             \"Top 10 Categories with most installs\", \"dark_background\")\n"
+    "             \"Top 10 Categories with most installs\",  )\n"
    ]
   },
   {
@@ -411,7 +410,7 @@
     "top_10_developers= np.flip(top_10_developers, axis=0)\n",
     "\n",
     "utils.plots(top_10_developers[:,0], top_10_developers[:,1], \"Developer\",\\\n",
-    "            \"Number of apps\", \"Top 10 Developers with most apps\", \"dark_background\")"
+    "            \"Number of apps\", \"Top 10 Developers with most apps\",  )"
    ]
   },
   {
@@ -462,7 +461,7 @@
     }
    ],
    "source": [
-    "utils.pie_plots(ratings_arr[:,1],ratings_arr[:,0],'Percentage of ratings', \"dark_background\")\n",
+    "utils.pie_plots(ratings_arr[:,1],ratings_arr[:,0],'Percentage of ratings',  )\n",
     "\n",
     "'''\n",
     "This shows that most of the users do not rate the apps, and when they do their ratings are usually between 4-5.\n",
@@ -512,7 +511,7 @@
     "ratings = [x[1] for x in categ_rate.collect()]\n",
     "\n",
     "utils.plots(categories, ratings, \"Category\", \"Average Rating\",\\\n",
-    "            \"Category vs Average Rating\", \"dark_background\", y_limit=True)\n"
+    "            \"Category vs Average Rating\", y_limit=True)\n"
    ]
   },
   {
@@ -645,7 +644,7 @@
     "\n",
     "\n",
     "utils.plots(categories, ratings, \"Category\", \"Average Rating\", \"Paid Apps' Rating\",\\\n",
-    "             \"dark_background\", y_limit=True)"
+    "            y_limit=True)"
    ]
   },
   {
@@ -711,7 +710,7 @@
     "\n",
     "utils.scatter_plot_colorbar(max_installs,rating_count,content_rating,\\\n",
     "                            'Max Installs','Rating Count','Content Rating',\\\n",
-    "                            'Max Installs vs Rating Count by Content Rating', 'dark_background')\n",
+    "                            'Max Installs vs Rating Count by Content Rating')\n",
     "\n",
     "'''\n",
     "Everyone then teens are more engaged with the apps, and they are more likely to rate the apps.\n",
@@ -779,7 +778,7 @@
     "app_name = [x[0] for x in high_rated_paid_apps]\n",
     "rating = [x[1] for x in high_rated_paid_apps]\n",
     "\n",
-    "utils.plots(rating, app_name, \"Rating\", \"App Name\", \"Top 10 High Rated Paid Apps\", \"dark_background\",line_plot=True)\n"
+    "utils.plots(rating, app_name, \"Rating\", \"App Name\", \"Top 10 High Rated Paid Apps\",line_plot=True)\n"
    ]
   },
   {
@@ -828,7 +827,7 @@
     "app_name = [x[0] for x in high_rated_free_apps]\n",
     "rating = [x[1] for x in high_rated_free_apps]\n",
     "\n",
-    "utils.plots(rating, app_name, \"Rating\", \"App Name\", \"Top 10 High Rated Free Apps\", \"dark_background\",line_plot=True)"
+    "utils.plots(rating, app_name, \"Rating\", \"App Name\", \"Top 10 High Rated Free Apps\",line_plot=True)"
    ]
   }
  ],
