Number of outliers in each column

--- a/DataPreprocessing/DataPreprocessing.ipynb
+++ b/DataPreprocessing/DataPreprocessing.ipynb
@@ -35,15 +35,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "spark=SparkSession.builder\\\n",
-        "    .master(\"local[*]\")\\\n",
-        "    .appName(\"DataPreprocessing\")\\\n",
-        "    .config('spark.sql.execution.arrow.pyspark.enabled', True) \\\n",
-        "    .config('spark.sql.session.timeZone', 'UTC') \\\n",
-        "    .config('spark.driver.memory','32G') \\\n",
-        "    .config('spark.ui.showConsoleProgress', True) \\\n",
-        "    .config('spark.sql.repl.eagerEval.enabled', True) \\\n",
-        "    .getOrCreate()\n",
+        "# spark = SparkSession.builder \\\n",
+        "#     .master(\"local[*]\") \\\n",
+        "#     .appName(\"DataPreprocessing\") \\\n",
+        "#     .config('spark.sql.execution.arrow.pyspark.enabled', True) \\\n",
+        "#     .config('spark.sql.session.timeZone', 'UTC') \\\n",
+        "#     .config('spark.driver.memory', '48G') \\\n",
+        "#     .config('spark.ui.showConsoleProgress', True) \\\n",
+        "#     .config('spark.sql.repl.eagerEval.enabled', True) \\\n",
+        "#     .getOrCreate()\n",
+        "\n",
+        "spark = SparkSession.builder.appName('DataPreprocessing').getOrCreate()\n",
         "\n",
         "sc=spark.sparkContext"
       ]
@@ -69,28 +71,10 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "+--------------------+--------------------+-------------+------+------------+--------+----------------+----------------+----+-----+--------+----+---------------+--------------------+--------------------+--------------------+------------+------------+--------------+--------------------+------------+----------------+--------------+-------------------+\n",
-            "|            App Name|              App Id|     Category|Rating|Rating Count|Installs|Minimum Installs|Maximum Installs|Free|Price|Currency|Size|Minimum Android|        Developer Id|   Developer Website|     Developer Email|    Released|Last Updated|Content Rating|      Privacy Policy|Ad Supported|In App Purchases|Editors Choice|       Scraped Time|\n",
-            "+--------------------+--------------------+-------------+------+------------+--------+----------------+----------------+----+-----+--------+----+---------------+--------------------+--------------------+--------------------+------------+------------+--------------+--------------------+------------+----------------+--------------+-------------------+\n",
-            "|             Gakondo| com.ishakwe.gakondo|    Adventure|   0.0|           0|     10+|              10|              15|True|  0.0|     USD| 10M|     7.1 and up|Jean Confident Ir...|https://beniyizib...|jean21101999@gmai...|Feb 26, 2020|Feb 26, 2020|      Everyone|https://beniyizib...|       False|           False|         False|2021-06-15 20:19:35|\n",
-            "| Ampere Battery Info|com.webserveis.ba...|        Tools|   4.4|          64|  5,000+|            5000|            7662|True|  0.0|     USD|2.9M|     5.0 and up|          Webserveis|https://webservei...|webserveis@gmail.com|May 21, 2020|May 06, 2021|      Everyone|https://dev4phone...|        True|           False|         False|2021-06-15 20:19:35|\n",
-            "|              Vibook|com.doantiepvien.crm| Productivity|   0.0|           0|     50+|              50|              58|True|  0.0|     USD|3.7M|   4.0.3 and up|          Cabin Crew|                null| vnacrewit@gmail.com| Aug 9, 2019|Aug 19, 2019|      Everyone|https://www.vietn...|       False|           False|         False|2021-06-15 20:19:35|\n",
-            "|Smart City Trichy...|cst.stJoseph.ug17...|Communication|   5.0|           5|     10+|              10|              19|True|  0.0|     USD|1.8M|   4.0.3 and up| Climate Smart Tech2|http://www.climat...|climatesmarttech2...|Sep 10, 2018|Oct 13, 2018|      Everyone|                null|        True|           False|         False|2021-06-15 20:19:35|\n",
-            "|             GROW.me|com.horodyski.grower|        Tools|   0.0|           0|    100+|             100|             478|True|  0.0|     USD|6.2M|     4.1 and up|Rafal Milek-Horod...|http://www.horody...|rmilekhorodyski@g...|Feb 21, 2020|Nov 12, 2018|      Everyone|http://www.horody...|       False|           False|         False|2021-06-15 20:19:35|\n",
-            "+--------------------+--------------------+-------------+------+------------+--------+----------------+----------------+----+-----+--------+----+---------------+--------------------+--------------------+--------------------+------------+------------+--------------+--------------------+------------+----------------+--------------+-------------------+\n",
-            "only showing top 5 rows\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "df = DataPreprocessing.read_data(spark)\n",
-        "df.show(5)"
+        "# df.show(5)"
       ]
     },
     {
@@ -122,41 +106,9 @@
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "                    count  percentage\n",
-            "Developer Website  760826   32.894268\n",
-            "Privacy Policy     420947   18.199619\n",
-            "Released            71055    3.072059\n",
-            "Rating              22913    0.990642\n",
-            "Rating Count        22894    0.989821\n",
-            "Minimum Android      6530    0.282324\n",
-            "Size                  196    0.008474\n",
-            "Minimum Installs      141    0.006096\n",
-            "Currency              135    0.005837\n",
-            "Installs              107    0.004626\n",
-            "Developer Email        38    0.001643\n",
-            "Maximum Installs       37    0.001600\n",
-            "Developer Id           33    0.001427\n",
-            "Price                  19    0.000821\n",
-            "Ad Supported            4    0.000173\n",
-            "In App Purchases        2    0.000086\n",
-            "Content Rating          0    0.000000\n",
-            "Editors Choice          0    0.000000\n",
-            "App Name                0    0.000000\n",
-            "Last Updated            0    0.000000\n",
-            "App Id                  0    0.000000\n",
-            "Free                    0    0.000000\n",
-            "Category                0    0.000000\n",
-            "Scraped Time            0    0.000000\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "DataPreprocessing.show_nulls(df)"
+        "# DataPreprocessing.show_nulls(df)"
       ]
     },
     {
@@ -188,9 +140,21 @@
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of outliers in Rating: 0 (0.00%)\n",
+            "Number of outliers in Rating Count: 388994 (16.82%)\n",
+            "Number of outliers in Minimum Installs: 260554 (11.27%)\n",
+            "Number of outliers in Maximum Installs: 407678 (17.63%)\n",
+            "Number of outliers in Price: 44943 (1.94%)\n"
+          ]
+        }
+      ],
       "source": [
-        "# DataPreprocessing.detect_outliers(df)"
+        "DataPreprocessing.detect_outliers(df)"
       ]
     },
     {
@@ -212,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -230,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -239,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -257,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -275,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -292,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
