statistics for outliers

--- a/DataPreprocessing/DataPreprocessing.ipynb
+++ b/DataPreprocessing/DataPreprocessing.ipynb
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -149,12 +149,14 @@
             "Number of outliers in Rating Count: 388994 (16.82%)\n",
             "Number of outliers in Minimum Installs: 260554 (11.27%)\n",
             "Number of outliers in Maximum Installs: 407678 (17.63%)\n",
-            "Number of outliers in Price: 44943 (1.94%)\n"
+            "Number of outliers in Price: 44943 (1.94%)\n",
+            "Number of rows before removing outliers: 2312944\n",
+            "Number of rows after removing outliers: 1961130\n"
           ]
         }
       ],
       "source": [
-        "DataPreprocessing.detect_outliers(df)"
+        "new_df_with_no_outliers= DataPreprocessing.detect_outliers(df)"
       ]
     },
     {
