Done with missing values

--- a/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
+++ b/DataAnalysis/DescriptiveAnalysis/DescriptiveAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        " 'GROW.me,com.horodyski.grower,Tools,0.0,0.0,100+,100,478,True,0.0,USD,6.2M,4.1 and up,Rafal Milek-Horodyski,http://www.horodyski.com.pl,rmilekhorodyski@gmail.com,Feb 21  2020,Nov 12  2018,Everyone,http://www.horodyski.com.pl,False,False,False,2021-06-15 20:19:35']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,6 +74,26 @@
     "header= rdd.first()\n",
     "rdd= rdd.filter(lambda x: x!=header)\n",
     "rdd.take(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# compute ecludian distance between x and each cetroid in centroids and return centroid with min distance\n",
+    "def compute_closest_centroid(x,centroids):\n",
+    "    distances = [ np.sqrt(np.sum((float(x) - centroid)**2)) for centroid in centroids]\n",
+    "    return np.argmin(distances)\n",
+    "\n",
+    "centroids=[2, 4, 5, 4.5,0]\n",
+    "\n",
+    "map_result= rdd.map(lambda x: x.split(',')[3])\\\n",
+    "            .map(lambda x: (compute_closest_centroid(x,centroids), x))\n",
+    "\n",
+    "map_result.take(15)"
    ]
   },
   {
