Dealing with Size and Scraped time columns

--- a/DataPreprocessing/DataPreprocessing.ipynb
+++ b/DataPreprocessing/DataPreprocessing.ipynb
@@ -128,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -351,7 +351,7 @@
       ],
       "source": [
         "interesting_num_cols=['Rating','Rating Count','Maximum Installs']\n",
-        "df= DataPreprocessing.handle_missing_values(df, handling_method='mean', cols=interesting_num_cols)\n"
+        "df= DataPreprocessing.handle_missing_values(df, handling_method='mean', cols=interesting_num_cols)"
       ]
     },
     {
@@ -415,26 +415,164 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Explore 'Size' column"
+        "# Explore some columns"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Size"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Percentage of apps with size \"Varies with device\": 3.233940876232107 %\n"
+          ]
+        }
+      ],
       "source": [
-        "# DataPreprocessing.handle_size_col(df)"
+        "DataPreprocessing.check_values_in_size_col(df)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The percentage of \"Varies with app\" is too low, then can remove all rows with this value\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('The percentage of \"Varies with app\" is too low, then can remove all rows with this value')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Converted all sizes to Bytes.\n"
+          ]
+        }
+      ],
+      "source": [
+        "df= DataPreprocessing.convert_size_to_bytes(df)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Scraped time"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "+------------+-------+\n",
+            "|Scraped Time|  count|\n",
+            "+------------+-------+\n",
+            "|  2021-06-16|1794115|\n",
+            "|  2021-06-15| 437299|\n",
+            "|       False|     20|\n",
+            "|        True|      1|\n",
+            "+------------+-------+\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "DataPreprocessing.check_scraped_time(df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Most of the apps were scrapped in the same 2 days, then we can remove this column.\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Most of the apps were scrapped in the same 2 days, then we can remove this column.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# print('The percentage of \"Varies with app\" is too low, then can remove all rows with this value')\n",
-        "# df = df.filter(df.Size != 'Varies with device')"
+        "df = DataPreprocessing.remove_useless_col(df, ['Scraped time'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['App Name',\n",
+              " 'App Id',\n",
+              " 'Category',\n",
+              " 'Rating',\n",
+              " 'Rating Count',\n",
+              " 'Installs',\n",
+              " 'Minimum Installs',\n",
+              " 'Maximum Installs',\n",
+              " 'Free',\n",
+              " 'Price',\n",
+              " 'Size',\n",
+              " 'Minimum Android',\n",
+              " 'Developer Id',\n",
+              " 'Developer Email',\n",
+              " 'Released',\n",
+              " 'Last Updated',\n",
+              " 'Content Rating',\n",
+              " 'Ad Supported',\n",
+              " 'In App Purchases',\n",
+              " 'Editors Choice']"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.columns"
       ]
     },
     {
@@ -447,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -465,7 +603,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -482,7 +620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
