Displaying type of each feature

--- a/DataPreprocessing/DataPreprocessing.ipynb
+++ b/DataPreprocessing/DataPreprocessing.ipynb
@@ -601,6 +601,45 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[('App Name', 'string'),\n",
+              " ('App Id', 'string'),\n",
+              " ('Category', 'string'),\n",
+              " ('Rating', 'float'),\n",
+              " ('Rating Count', 'int'),\n",
+              " ('Installs', 'string'),\n",
+              " ('Minimum Installs', 'int'),\n",
+              " ('Maximum Installs', 'int'),\n",
+              " ('Free', 'string'),\n",
+              " ('Price', 'float'),\n",
+              " ('Size', 'string'),\n",
+              " ('Minimum Android', 'string'),\n",
+              " ('Developer Id', 'string'),\n",
+              " ('Developer Email', 'string'),\n",
+              " ('Released', 'string'),\n",
+              " ('Last Updated', 'string'),\n",
+              " ('Content Rating', 'string'),\n",
+              " ('Ad Supported', 'string'),\n",
+              " ('In App Purchases', 'string'),\n",
+              " ('Editors Choice', 'string')]"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.dtypes"
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
@@ -610,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
